# facex

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: capture.cpp  capture.h  detection.cpp  detection.h  main.cpp  resolver.cpp  resolver.h  result.cpp  result.h  server.cpp  server.h  store.h
